<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spottechnicians.caudit.ModuleCT.Photo_Of_CT">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCTPhotoHeading"
            style="@style/photoMenuHeading" />

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivCtPhoto1"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@mipmap/ic_launcher"

                />

            <TextView
                android:id="@+id/ctPhotoText1"
                style="@style/photoMenuTV"
                android:text="@string/ctphoto1text1" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivCtPhoto2"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@mipmap/ic_launcher"

                />

            <TextView
                android:id="@+id/ctPhotoText2"
                style="@style/photoMenuTV"
                android:text="@string/ctphoto1text2" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivCtPhoto3"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/ctPhotoText3"
                style="@style/photoMenuTV"
                android:text="@string/ctphoto1text3" />


        </LinearLayout>

        <Button
            android:id="@+id/btnCTPhotoNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next" />

    </LinearLayout>

</ScrollView>
