<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DailyVisitReport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            >
            <LinearLayout
                android:id="@+id/dailyreportlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    style="@style/Home_ImageView"
                    android:onClick="popupOptions"
                    android:src="@drawable/ic_report" />

                <TextView
                    android:id="@+id/ct_hk_tv"
                    style="@style/BaseText"
                    android:text="@string/ct_hk"
                    />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    style="@style/Home_ImageView"
                    android:src="@drawable/ic_report" />

                <TextView
                    android:id="@+id/srm_tv"
                    style="@style/BaseText"
                    android:text="@string/srm"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    style="@style/Home_ImageView"
                    android:src="@drawable/ic_report" />

                <TextView
                    android:id="@+id/tis_tv"
                    style="@style/BaseText"
                    android:text="@string/tis"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    style="@style/Home_ImageView"

                    android:src="@drawable/ic_report" />

                <TextView
                    android:id="@+id/ebill_tv"
                    style="@style/BaseText"
                    android:text="@string/ebill"
                    />

            </LinearLayout>

        </LinearLayout>





    </LinearLayout>


</ScrollView>
