<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.spottechnicians.caudit.Home">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/dailyreportlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    style="@style/Home_ImageView"
                    android:onClick="openDailyVisitReport"
                    android:src="@drawable/ic_report"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/daily_report_tv"
                    style="@style/BaseText"
                    android:text="@string/daily_visit"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    style="@style/Home_ImageView"
                    android:src="@drawable/ic_report" />

                <TextView
                    android:id="@+id/other_report_tv"
                    style="@style/BaseText"
                    android:text="@string/srm_report"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    style="@style/Home_ImageView"
                    android:onClick="aduditClicked"
                    android:src="@drawable/ic_audit_done" />

                <TextView
                    android:id="@+id/audited_tv"
                    style="@style/BaseText"
                    android:text="@string/audited"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    style="@style/Home_ImageView"
                    android:src="@drawable/ic_audit_done" />

                <TextView
                    android:id="@+id/unaudited_tv"
                    style="@style/BaseText"
                    android:text="@string/unaudited"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="51dp"
                    style="@style/Home_ImageView"
                    android:src="@drawable/ic_audit_done_upload" />

                <TextView
                    style="@style/BaseText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    style="@style/Home_ImageView"
                    android:src="@drawable/ic_camera_photos" />

                <TextView
                    style="@style/BaseText"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="65dp"
                style="@style/Home_ImageView"

                android:src="@drawable/ic_sync" />

            <TextView
                android:id="@+id/sycn_tv"
                style="@style/BaseText"
                android:text="@string/sync"

                />

        </LinearLayout>

    </LinearLayout>




</ScrollView>
